# fastbank-api

./: .env  README.md  banco.db  pyproject.toml
src/: config.py  create_tables.py  database.py  exceptions.py  main.py  security.py  security_old.py
src/controllers/: account.py  auth.py  transaction.py
src/models/: account.py  transaction.py
src/schemas/: transaction.py
src/services/: account.py  transaction.py
src/views/: account.py  transaction.py
