[project]
name = "bancario-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Fernando Pereira",email = "fhpdev@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)",
    "pyjwt[crypto] (>=2.12.1,<3.0.0)",
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "databases[sqlite] (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
